// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots renderers/DropdownFilter default 1`] = `
<div
  className="canvasDropdownFilter"
>
  <select
    className="canvasDropdownFilter__select"
    onChange={[Function]}
  >
    <option
      aria-selected={false}
      value="%%CANVAS_MATCH_ALL%%"
    >
      -- ANY --
    </option>
  </select>
  <svg
    className="euiIcon euiIcon--medium canvasDropdownFilter__icon"
    focusable="false"
    height="16"
    style={null}
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
        id="arrow_down-a"
      />
    </defs>
    <use
      fillRule="nonzero"
      xlinkHref="#arrow_down-a"
    />
  </svg>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with choices 1`] = `
<div
  className="canvasDropdownFilter"
>
  <select
    className="canvasDropdownFilter__select"
    onChange={[Function]}
  >
    <option
      aria-selected={false}
      value="%%CANVAS_MATCH_ALL%%"
    >
      -- ANY --
    </option>
    <option
      aria-selected={false}
      value="Item One"
    >
      Item One
    </option>
    <option
      aria-selected={false}
      value="Item Two"
    >
      Item Two
    </option>
    <option
      aria-selected={false}
      value="Item Three"
    >
      Item Three
    </option>
  </select>
  <svg
    className="euiIcon euiIcon--medium canvasDropdownFilter__icon"
    focusable="false"
    height="16"
    style={null}
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
        id="arrow_down-a"
      />
    </defs>
    <use
      fillRule="nonzero"
      xlinkHref="#arrow_down-a"
    />
  </svg>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with choices and new value 1`] = `
<div
  className="canvasDropdownFilter"
>
  <select
    className="canvasDropdownFilter__select"
    onChange={[Function]}
    value="selectedValue"
  >
    <option
      aria-selected={false}
      value="%%CANVAS_MATCH_ALL%%"
    >
      -- ANY --
    </option>
    <option
      aria-selected={false}
      value="Item One"
    >
      Item One
    </option>
    <option
      aria-selected={false}
      value="Item Two"
    >
      Item Two
    </option>
    <option
      aria-selected={false}
      value="Item Three"
    >
      Item Three
    </option>
  </select>
  <svg
    className="euiIcon euiIcon--medium canvasDropdownFilter__icon"
    focusable="false"
    height="16"
    style={null}
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
        id="arrow_down-a"
      />
    </defs>
    <use
      fillRule="nonzero"
      xlinkHref="#arrow_down-a"
    />
  </svg>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with choices and value 1`] = `
<div
  className="canvasDropdownFilter"
>
  <select
    className="canvasDropdownFilter__select"
    onChange={[Function]}
    value="Item Two"
  >
    <option
      aria-selected={false}
      value="%%CANVAS_MATCH_ALL%%"
    >
      -- ANY --
    </option>
    <option
      aria-selected={false}
      value="Item One"
    >
      Item One
    </option>
    <option
      aria-selected={true}
      value="Item Two"
    >
      Item Two
    </option>
    <option
      aria-selected={false}
      value="Item Three"
    >
      Item Three
    </option>
  </select>
  <svg
    className="euiIcon euiIcon--medium canvasDropdownFilter__icon"
    focusable="false"
    height="16"
    style={null}
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
        id="arrow_down-a"
      />
    </defs>
    <use
      fillRule="nonzero"
      xlinkHref="#arrow_down-a"
    />
  </svg>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with new value 1`] = `
<div
  className="canvasDropdownFilter"
>
  <select
    className="canvasDropdownFilter__select"
    onChange={[Function]}
    value="selectedValue"
  >
    <option
      aria-selected={false}
      value="%%CANVAS_MATCH_ALL%%"
    >
      -- ANY --
    </option>
  </select>
  <svg
    className="euiIcon euiIcon--medium canvasDropdownFilter__icon"
    focusable="false"
    height="16"
    style={null}
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
        id="arrow_down-a"
      />
    </defs>
    <use
      fillRule="nonzero"
      xlinkHref="#arrow_down-a"
    />
  </svg>
</div>
`;
